# name.abuchen.portfolio.rest/src/name/abuchen/portfolio/rest/ApiRoutes.java
@@ -1,6 +1,7 @@
 package name.abuchen.portfolio.rest;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Map;
 import java.util.function.BiFunction;
 
 import com.google.gson.JsonObject;
@@ -25,6 +26,7 @@ import name.abuchen.portfolio.rest.internal.Response;
 import name.abuchen.portfolio.rest.internal.Router;
 import name.abuchen.portfolio.rest.internal.SecuritiesHandler;
 import name.abuchen.portfolio.rest.internal.TradesHandler;
+import name.abuchen.portfolio.rest.internal.TransactionChangeLog;
 import name.abuchen.portfolio.rest.internal.TransactionsHandler;
 import name.abuchen.portfolio.rest.internal.VersionHandler;
 import name.abuchen.portfolio.rest.internal.mcp.McpEndpoint;
@@ -117,6 +119,15 @@ public final class ApiRoutes
                         "type", "from", "to", "instrument", "cashAccount", "investmentAccount"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$
         router.add("GET", "/v1/files/{file}/transactions/{uuid}", read(resolver, host, //$NON-NLS-1$ //$NON-NLS-2$
                         (client, req) -> Response.json(200, TransactionsHandler.get(client, req.pathParam("uuid"))))); //$NON-NLS-1$
+        router.add("POST", "/v1/files/{file}/transactions", write(resolver, host, //$NON-NLS-1$ //$NON-NLS-2$
+                        (file, req) -> {
+                            var entity = TransactionsHandler.create(file.getClient(), parseObject(req), req.clientName());
+                            var uuid = entity.get("uuid").getAsString(); //$NON-NLS-1$
+                            TransactionChangeLog.recordCreation(file.getLabel(), uuid);
+                            var response = Response.json(201, entity);
+                            return new Response(response.status(), response.contentType(), response.body(),
+                                            Map.of("Location", req.path() + "/" + uuid)); //$NON-NLS-1$ //$NON-NLS-2$
+                        }));
 
         router.add("GET", "/v1/files/{file}/holdings", calc(resolver, host, //$NON-NLS-1$ //$NON-NLS-2$
                         (context, req) -> Response.json(200, HoldingsHandler.list(context.client(), context.factory(),
